--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,13 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/aos/dist/aos.css"
             ],
-            "scripts": ["node_modules/preline/dist/index.js"]
+            "scripts": [
+              "node_modules/preline/dist/index.js",
+              "node_modules/aos/dist/aos.js"
+            ]
           },
           "configurations": {
             "production": {
