--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^20.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/postcss": "^4.1.11",
+    "aos": "^2.3.4",
     "postcss": "^8.5.6",
     "preline": "^3.1.0",
     "rxjs": "~7.8.0",
@@ -39,6 +40,7 @@
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.0",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
